<resources>
    <string name="app_name">AgoraAudioIO</string>

    <!--App strs-->
    <string name="et_hint">Please input channel name!</string>

    <string name="tv_text">please chose one item!</string>

    <string name="rb_a2a">AppGather,AppPlay</string>
    <string name="rb_a2s">AppGather,SDKPlay</string>
    <string name="rb_s2a">SDKGather,AppPlay</string>
    <string name="rb_s2s">SDKGather,SDKPlay</string>

    <string name="rb_profile_8000">8000</string>
    <string name="rb_profile_16000">16000</string>
    <string name="rb_profile_32000">32000</string>
    <string name="rb_profile_44100">44100</string>
    <!--App key-->
    <string name="app_key">4c51ad802859440cbfb89eb75919d9ed</string>
</resources>
