<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <RadioGroup
        android:layout_margin="@dimen/et_margin"
        android:id="@+id/rg_audio_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_8000"
            android:text="@string/rb_profile_8000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_16000"
            android:text="@string/rb_profile_16000"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_32000"
            android:text="@string/rb_profile_32000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_441000"
            android:text="@string/rb_profile_44100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>